syntax = "proto3";

package price;
option go_package = "bothan-api/price";

service PriceService {
  rpc GetPriceData(PriceDataRequest) returns (PriceDataResponse) {}
}

message PriceDataRequest { string id = 1; }

message PriceDataResponse { repeated PriceData price_data_list = 1; }

message PriceData {
  string id = 1;
  string price = 2;
  uint64 timestamp = 3;
}
